fix: fix paragraph contrast colors of services section

--- a/app/(root)/styles.css
+++ b/app/(root)/styles.css
@@ -9,12 +9,12 @@
 }
 
 .services-section h3 {
-  color: #625f5f;
+  color: black;
   text-align: center;
 }
 
 .services-section p {
-  color: #625f5f;
+  color: black;
   font-weight: 600;
   background-color: #facc15;
   text-align: center;
